fix spacing

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
 
 .events {
   font-size: 160%;
-  padding: 4em 0 4em 0;
+  padding: 2em 0 2em 0;
   background-color: black;
   color: white;
 }
